<resources>
    <string name="app_name">TicTacToe</string>
    <string name="enter_your_name">ENTER YOUR NAME</string>
    <string name="continue_button">CONTINUE</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="choose_game_mode">CHOOSE GAME MODE</string>
    <string name="select_player">SELECT PLAYER</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="multi_player">MULTI PLAYER</string>
    <string name="or">OR</string>
    <string name="play">PLAY</string>
    <string name="change_size_of_the_board">CHANGE SIZE 0F THE BOARD</string>
    <string name="size_three">3</string>
    <string name="reset">RESET</string>
    <string name="new_game">NEW GAME</string>
    <string name="result">RESULT</string>
    <string name="game_over">GAME OVER</string>
    <string name="about_explanation">Tic tac toe is a pencil and paper game.
For two players, X and O, who take time
making the spaces on 3*3 grid.
The player who succeeds in placing
three of their marks in a vertical,
horizontal or diagonal row wins the game. </string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="player_one">Player 1: </string>
    <string name="player_two">Player 2: </string>
    <string name="size_four">4</string>
    <string name="size_five">5</string>
    <string name="score">0</string>
    <string name="scores">SCORES</string>
    <string name="draw">Draw:  </string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="turn_player_one">Player One\'s Turn.</string>
    <string name="turn_player_two">Player Two\'s Turn.</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You Won!</string>
    <string name="result_android_wins">Android Won!</string>
    <string name="result_player_one_wins">Player One Wins!</string>
    <string name="result_player_two_wins">Player Two Wins!</string>
    <string name="dialogue">Click a button to start</string>
</resources>
