<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tictactoe.HomePage">

    <View
        android:id="@+id/background_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:alpha="0.4"
        android:background="@drawable/background_one"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/settings"
        android:layout_width="76dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="8dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/buttons"
        android:text="@string/settings"
        android:onClick="openSettings"
        android:textAppearance="@style/settings"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/about"
        android:layout_width="76dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/settings"
        android:layout_alignStart="@+id/settings"
        android:layout_below="@+id/settings"
        android:layout_marginTop="14dp"
        android:background="@drawable/buttons"
        android:text="@string/about"
        android:onClick="openAbout"
        android:textAppearance="@style/about" />
    
    <Button
        android:id="@+id/choose_game_mode"
        android:layout_width="256dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/buttons2"
        android:elevation="4dp"
        android:text="@string/choose_game_mode"
        android:onClick="openGameModes"
        android:textAppearance="@style/choose_game_mode"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/continue_home_page"
        android:layout_width="220dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="475dp"
        android:background="@drawable/buttons"
        android:elevation="4dp"
        android:text="@string/continue_button"
        android:textAppearance="@style/continue_button" />

</android.widget.RelativeLayout>
